--- a/services/ml_service/requirements.txt
+++ b/services/ml_service/requirements.txt
@@ -1,13 +1,8 @@
-numpy==1.26.4
-pandas==1.5.0
-matplotlib==3.9.2
-pickle4==0.0.1
-seaborn==0.13.2
-bokeh==3.4.0
-mlflow==2.17.0
-catboost==1.2.7
-mlxtend==0.23.3
-autofeat==2.1.3
-optuna==4.1.0
+prometheus_fastapi_instrumentator
 fastapi
 uvicorn
+pandas
+pickle4
+pydantic
+scikit-learn
+cloudpickle
